fixed the alignments  on the right side

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1346,7 +1346,7 @@ section#support .media:hover i {
   top: 0;
   bottom: 0;
   overflow: auto;
-  width: 65%;
+  width: 77%;
 }
 .middle-panel-smaller {
   left: 19%;
