--- a/app/styles/sidebar.less
+++ b/app/styles/sidebar.less
@@ -4,7 +4,7 @@
   top: 0;
   bottom: 0;
   overflow: auto;
-  width: 65%;
+  width: 77%;
 }
 
 //Make sure that the difference between these two is exactly 12
